# ULIS

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE.md  README.md  out.txt
.github/: FUNDING.yml
.temp/Draw/: Draw.h
.temp/Image/: Texture.h  Texture_Private.h
.temp/Sparse/: Chunk.h  Chunk_Private.h  TilePool.h  TilePool.ipp  TiledBlock.h  TiledBlock.ipp  TiledBlock_Private.ipp
.temp/Text/: Font.cpp  FontRegistry.cpp
.temp/Transform/: TransformDispatch.ipp
binding/JavaScript/: CMakeLists.txt
binding/Python/: CMakeLists.txt
binding/Python/CPython-module/: macros.h
binding/Python/documentation/: .gitignore  conf.py
binding/Python/interactive/: Canvas.cpp  Canvas.h  main.cpp
binding/Python/interactive/res/samples/: blackHole.py  hairSpriteSheet.py  loading.py  particles.py  transform.py
binding/Python/interactive/res/style/: style.qss
binding/Python/interactive/src/: ASyncJS_PPFramework.h  Caption.cpp  Caption.h  Code.cpp  Code.h  Console.cpp  Console.h  CustomButton.cpp  CustomButton.h  CustomCaption.cpp  CustomCaption.h  CustomMainWindow.cpp  CustomMainWindow.h  CustomMainWindowBase.cpp  DefaultCaption.cpp  DefaultCaption.h  DockingCallbackLibrary.cpp  DockingManager.cpp  DockingManager.h  ForwardNC.h  GeometryUtils.h  HardwareMetrics.cpp  HardwareMetrics.h  MainWindow.cpp  MainWindow.h  MonacoWidget.cpp  MonacoWidget.h  Rivet.CustomCaption.h  Rivet.CustomMainWindow.h  Rivet.DefaultCaption.h  Rivet.DockingCallbackLibrary.h  Rivet.MonacoWidget.h  Rivet.Tab.cpp  Rivet.Tab.h  Rivet.TabArea.cpp  Rivet.TabArea.h  Rivet.__private__.ASyncJS_PPFramework.h  Rivet.__private__.AbstractFramelessBlurBehindWindow.cpp  Rivet.__private__.AbstractFramelessBlurBehindWindow.h  Rivet.__private__.CustomMainWindowBase.cpp  (+18 more)
binding/Python/interactive/src/Rivet/: ASyncJS_PPFramework.h  CustomButton.cpp  CustomButton.h  CustomCaption.cpp  CustomCaption.h  CustomMainWindow.cpp  CustomMainWindow.h  CustomMainWindowBase.cpp  CustomMainWindowBase.h  DefaultCaption.cpp  DefaultCaption.h  DockingCallbackLibrary.cpp  DockingCallbackLibrary.h  DockingManager.cpp  DockingManager.h  ForwardNC.h  FramelessTranslucentBlurBehindWindow.cpp  FramelessTranslucentBlurBehindWindow.h  GeometryUtils.cpp  GeometryUtils.h  Tab.cpp  Tab.h  TabArea.cpp  TabArea.h  WinExtras.cpp  WinExtras.h
binding/Python/module/: demo.py  pyULIS.cpp
binding/Python/module/documentation/: conf.py  index.rst  pyULIS4.rst
binding/Python/module/pyTypes/: Block.h
binding/Python/module/src/: pyULIS.cpp
binding/UnrealEngine4/: README.md  README.txt  ULIS.Build.cs
binding/WebAssembly/: CMakeLists.txt
binding/WebAssembly/applications/: CMakeLists.txt
binding/WebAssembly/applications/wBlendDemo/: CMakeLists.txt
binding/WebAssembly/applications/wFormats/: CMakeLists.txt  wFormats.cpp
binding/WebAssembly/applications/wInfo/: wInfo.cpp
binding/WebAssembly/applications/wimgui_interop/: CMakeLists.txt
binding/WebAssembly/jsULIS/: CMakeLists.txt  jsULIS.cpp  jsULIS.html
binding/WebAssembly/module/: CMakeLists.txt  demo.html  wULIS4.html
binding/WebAssembly/module/demo/: .htaccess  demo.js  style.css  wULIS4.html
binding/WebAssembly/module/src/: wULIS.cpp
binding/WebAssembly/wBlendDemo/src/: wBlendDemo.cpp
binding/WebAssembly/wFormats/: CMakeLists.txt  wFormats.cpp
binding/WebAssembly/wInfo/: CMakeLists.txt  wInfo.cpp
binding/WebAssembly/wULIS/: CMakeLists.txt  wULIS.cpp  wULIS.html
documentation/: Doxyfile  README.md  build_documentation.bat  fixed_svgpan.js  postprocess_doc.py  style.css
documentation/manual/: AnatomyOfAFeature.md  Architecture.md  AsynchronousModelAndDispatchGuidelines.md  BuildAndInstalStepByStep.md  BuildAndInstallStepByStep.md  BuildFromSource.md  BuildTheDoc.md  CodingRules.md  Dependencies.md  DocumentationGuidelines.md  GitWorkflow.md  GlobalOverview.md  INDEX.md  LegalLicense.md  RepositoryStructure.md  Roadmap.md  Usage.md
example/: CMakeLists.txt  README.md
example/All/: main.cpp
example/AnimatedBezier/: AnimatedBezier.cpp  AnimatedBezier.h  CMakeLists.txt  main.cpp
example/AnimatedLayerStack/: AnimatedLayerStack.cpp
example/AnimatedLayerStackBasicDisplay/: AnimatedLayerStackRenderer.cpp  AnimatedLayerStackRenderer.h  Editor.cpp  main.cpp
example/AnimatedLayerStackDisplayFeedFFMPEG/: AnimatedLayerStackRenderer.cpp  AnimatedLayerStackRenderer.h  Editor.cpp  Editor.h  VReader.cpp  VReader.h  main.cpp
example/AnimatedProperty/: main.cpp
example/Bezier/: Bezier.cpp  CMakeLists.txt
example/Blend/: Blend.cpp  CMakeLists.txt
example/BlendShowcase/: BlendShowcase.cpp  CMakeLists.txt
example/ClearFillCopy/: CMakeLists.txt  ClearFillCopy.cpp
example/Context/: CMakeLists.txt  Context.cpp
example/Conversion/: CMakeLists.txt  Conversion.cpp
example/Convolution/: CMakeLists.txt  Convolution.cpp
example/Copy/: Copy.cpp
example/Extract/: CMakeLists.txt  Extract.cpp
example/FFMPEG/: main.cpp
example/FillPreserveAlpha/: FillPreserveAlpha.cpp
example/Gradient/: main.cpp
example/InteractiveDrawing/: CMakeLists.txt  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  ToolBar.cpp  ToolBar.h  ULISLoader.cpp  ULISLoader.h  main.cpp
example/Interp/: main.cpp
example/Kernel/: CMakeLists.txt  Kernel.cpp
example/LayerStack/: CMakeLists.txt  LayerStack.cpp
example/LayerStackWithVector/: LayerStackRenderer.cpp  LayerStackRenderer.h  LayerVector.cpp  LayerVector.h  VectorPrimitives.cpp  VectorPrimitives.h  VectorShapes.cpp  VectorShapes.h  main.cpp
example/LoadSaveClipboard/: CMakeLists.txt  LoadSaveClipboard.cpp
example/LoadSaveDisk/: CMakeLists.txt  LoadSaveDisk.cpp
example/MipMap/: main.cpp
example/Noise/: main.cpp
example/PSD/: CMakeLists.txt  PSD.cpp
example/Particles/: CMakeLists.txt  Particles.cpp  Particles.h  main.cpp
example/Pixels/: CMakeLists.txt  Pixels.cpp
example/Pool/: CMakeLists.txt  Pool.cpp
example/QtInterop/: QtInterop.cpp
example/Raster/: CMakeLists.txt  Raster.cpp
example/SimpleFluid/: CMakeLists.txt  SimpleFluid.cpp  SimpleFluid.h  main.cpp
example/Sparse/: main.cpp
include/: ULIS.h
test/: CMakeLists.txt
(+1091 files in other folders)
